# make_spark_example

./: .dockerignore  .gitignore  ARCHITECTURE.md  DOCKER_SPARK_README.md  Dockerfile  MANIFEST.in  Makefile  README.md  __init__.py  ci_test_runner.py  debug_imports.py  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_tests.sh  run_tests_ci.sh  setup.cfg  setup.py  submit_spark_job.sh  test_docker_spark.sh
.github/workflows/: ci.yml  example_test.yml.example  test.yml  tests.yml
conf/: hive-site.xml  spark-defaults.conf
src/: __main__.py  cli.py  spark_job.py
src/analysis/: tasks.py
src/utils/: hive_utils.py  spark_utils.py
tests/: __init__.py  conftest.py  path_helper.py  test_analysis_tasks.py  test_data_loader.py  test_imports.py
