[metadata]
name = billups-data-analysis
version = 1.0.0
description = Billups Merchant Data Analysis with PySpark
author = Your Name
license = MIT

[options]
packages = find:
python_requires = >=3.10
install_requires =
    pyspark>=3.0.0
    pandas>=1.3.0
    numpy>=1.21.0
    click>=8.0.0
    pyarrow>=5.0.0

[options.packages.find]
where = .
include = src*

[options.entry_points]
console_scripts =
    billups-analysis = src.cli:main

[mypy]
python_version = 3.10
warn_return_any = True
warn_unused_configs = True
ignore_missing_imports = True
exclude = notebooks

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_functions = test_*
addopts = -v --cov=src --cov-report=html --cov-report=term

[coverage:run]
source = src
omit = */tests/*,*/__init__.py,*/notebooks/*

[coverage:report]
precision = 2
show_missing = True
skip_covered = False